# img_query

./: README.md
backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/src/backend/: __init__.py  config.py  indexer.py  schema.py  search.py  server.py  split_image.py  utils.py
backend/src/backend/api/: __init__.py  routes.py
frontend/: .env.example  README.md  index.html  index.tsx  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Icon.tsx  ImageCard.tsx  RefinementPanel.tsx  SearchBar.tsx
frontend/src/context/: SearchContext.tsx
frontend/src/services/: service.ts
frontend/src/views/: HomeView.tsx  ResultsView.tsx
